--- a/.templates/sidebar_gpg.en.html
+++ b/.templates/sidebar_gpg.en.html
@@ -4,18 +4,18 @@
 
     Add links to a GPG key in the sidebar. (en version)
 
-    :copyright: Copyright 2013-2016 Lilian Besson
+    :copyright: Copyright 2013-2017 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <h3>My public PGP key</h3>
 <ul class="this-page-menu">
  <li><font style="font-size: 75%;">pgp.mit.edu</font>
-  <a class="reference external image-reference" title="pgp.mit.edu:11371/pks" 
+  <a class="reference external image-reference" title="pgp.mit.edu:11371/pks"
    href="http://pgp.mit.edu:11371/pks/lookup?op=get&amp;search=0x01AACDB9C108F8A0">
-   <img alt="C108F8A0" src="{{ pathto('_images/.gpgpublickey_80_15.png', true)|e }}?1" style="width: 80.0px; height: 15.0px;" />
+   <img alt="C108F8A0" src="{{ pathto('_images/.gpgpublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
   </a></li>
  <li><font style="font-size: 75%;">here</font>
-  <a class="reference external image-reference" title="key.asc" 
+  <a class="reference external image-reference" title="key.asc"
      href="{{ pathto('Lilian_Besson.asc', true)|e }}" >
-   <img alt="C108F8A0" src="{{ pathto('_images/.gpgmypublickey_80_15.png', true)|e }}?1" style="width: 80.0px; height: 15.0px;" />
+   <img alt="C108F8A0" src="{{ pathto('_images/.gpgmypublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
   </a></li></ul>
