--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -111,8 +111,24 @@
     };
   };
   writeLocationOfThePage("<li>", "</li>");
+  window.cookieconsent_options = {
+    "message":   "This website uses cookies to tweak its display. ",
+    "dismiss":   "Got it, thanks for letting me know! I agree!",
+    "learnMore": "More info?",
+    "link":      "http://perso.crans.org/besson/cookies.en.html",
+  };
+  if (e == '.fr.html') {
+    window.cookieconsent_options = {
+      "message":   "Ce site utilise des cookies pour personnaliser l'affichage. ",
+      "dismiss":   "OK, merci de prévenir. D'accord !",
+      "learnMore": "Plus d'informations ?",
+      "link":      "http://perso.crans.org/besson/cookies.fr.html",
+    };
+  };
  </script>
  <noscript><li><span style="color: red;">(JavaScript is disabled)</span></li></noscript>
+  <!-- Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+  <script type="text/javascript" src="{{ pathto('_static/cookieconsent.min.js', true)|e }}"></script>
 {% endblock %}
 
 {% block document %}
@@ -198,8 +214,8 @@
  Mousetrap.bind(["i"], function() { alert("Going to index.html"); location.href="index.html";});
 {% if next %}Mousetrap.bind(["right", "n"], function() { alert("Going to next <a href=\"{{ next.link|e }}\">{{ next.link|e }}</a>"); location.href="{{ next.link|e }}";});{% endif %}
 {% if last_updated %}Mousetrap.bind(["u"], function() {  // '%d %m %Y, %Hh:%Mm:%Ss'
-   var last_updated_value = "{{ last_updated }}" || "04 01 2017, 12h:00m:00s";
-    var day   = last_updated_value.substring(0,  2 ) || "04";
+   var last_updated_value = "{{ last_updated }}" || "07 01 2017, 12h:00m:00s";
+    var day   = last_updated_value.substring(0,  2 ) || "07";
     var month = last_updated_value.substring(3,  5 ) || "01";
     var year  = last_updated_value.substring(6,  10) || "2017";
     var hours = last_updated_value.substring(12, 14) || "12";
