Trying to move from http://lbesson.bitbucket.org/ to http://lbesson.bitbucket.io/
- Cf. details on https://confluence.atlassian.com/bitbucket/publishing-a-website-on-bitbucket-cloud-221449776.html

--- a/LICENSE.html
+++ b/LICENSE.html
@@ -21,7 +21,7 @@ if (typeof console !== 'undefined') { console.log("[INFO] Starting main JS conte
     case 'www.dptinfo.ens-cachan.fr':
         my_id = 'UA-38514290-2';  my_domain = 'dptinfo.ens-cachan.fr';
         break;
-    case 'lbesson.bitbucket.org':
+    case 'lbesson.bitbucket.io':
         my_id = 'UA-38514290-14'; my_domain = 'bitbucket.org';
         break;
     default:
