--- a/README.html
+++ b/README.html
@@ -88,4 +88,4 @@ take a look at the [LICENSE file](http://perso.crans.org/besson/LICENSE.html) in
 
 [![Analytics](https://ga-beacon.appspot.com/UA-38514290-17/bitbucket.org/lbesson/web-sphinx/README.md?pixel)](https://bitbucket.org/lbesson/web-sphinx)
 
-</xmp><script type="text/javascript" src="http://lbesson.bitbucket.org/md/strapdown.min.js?beacon=y"></script></body></html>
+</xmp><script type="text/javascript" src="http://lbesson.bitbucket.io/md/strapdown.min.js?beacon=y"></script></body></html>
