--- a/.templates/sourcepdf.fr.html
+++ b/.templates/sourcepdf.fr.html
@@ -10,7 +10,7 @@
 <h3>Autres formats</h3>
 {%- if show_source and has_source and sourcename %}
 <ul class="this-page-menu">
-{# <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}" title="Version PDF" 
+{# <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}" title="Version PDF"
         rel="nofollow">Voir la version PDF</a></li> #}
  <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}" title="Version txt"
         rel="nofollow">Voir le fichier source (rST)</a></li>
@@ -19,7 +19,7 @@
   var url = window.location.protocol + "//" + window.location.host + window.location.port + window.location.pathname + ".asc";
   // console.log("[INFO] url=" + url);
   window.document.write("<li><a class=\"external-reference\" href=\"https://bitbucket.org/lbesson/web-sphinx/src/master/"
-     + path.replace(".txt", ".rst")
+     + path.replace(".rst.txt", ".rst")
      + "\" title=\"Dans le dépôt git qui héberge la source de la page " + path
      + " !\">Voir le fichier source sur Bitbucket</a></li>");
   window.document.write("<li><a href=\"" + url + "\" title=\"Signature GPG ?\">Signature GPG (.asc)</a></li>");
