cdn.mathjax.org is closing, using cdnjs (see https://www.mathjax.org/cdn-shutting-down/).

--- a/footer.html
+++ b/footer.html
@@ -251,7 +251,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
 </li></ul></div>
    <script type="text/javascript" src="http://perso.crans.org/besson/_static/ga.js"></script>
   <!-- MathJax.js (http://mathjax.org/) async is quicker -->
-  <!-- <script async type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML&amp;locale=fr"></script> -->
+  <!-- <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML&amp;locale=fr"></script> -->
 </div>
 <!-- This file is © Lilian Besson, 2011-2014.
  * I'm a Computer Science and Mathematics student, at ENS de Cachan.
