cdn.mathjax.org is closing, using cdnjs (see https://www.mathjax.org/cdn-shutting-down/).

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -300,7 +300,7 @@ to collect audience log, you can disable it with
 </li></ul></div>
    <script type="text/javascript" src="{{ pathto('_static/ga.js', true)|e }}"></script>
   <!-- MathJax.js (http://mathjax.org/) async is quicker, hosted locally is safer and quicker -->
-   <!-- <script async type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML&amp;locale=fr"></script> -->
+   <!-- <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML&amp;locale=fr"></script> -->
    <script async type="text/javascript" src="{{ pathto('_static/mathjax/MathJax.js', true)|e }}?config=TeX-AMS-MML_HTMLorMML&amp;locale=fr"></script>
 </div>
 <!-- This file is © Lilian Besson, 2011-2017.
