--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -255,37 +255,37 @@ to collect audience log, you can disable it with
  <img alt="Uses Google Analytics"
       src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Written with GNU Nano 2.6.3 and Sublime Text v3.1.25" href="http://www.nano-editor.org/">
- <img alt="Written with GNU Nano 2.6.3 and Sublime Text v3.1.25"
+<li><a class="image-reference" title="Written with GNU Nano 2.7.4 and Sublime Text v3.1.25" href="http://www.nano-editor.org/">
+ <img alt="Written with GNU Nano 2.7.4 and Sublime Text v3.1.25"
       src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="This website is an Open Source project, released with the GPLv3 License" href="http://www.gnu.org/licenses/gpl.html">
  <img alt="This website is an Open Source project, released with the GPLv3 License"
       src="{{ pathto('_images/.opensource_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Python v3.5.2+ powered :)" href="https://www.python.org/download/">
- <img alt="Python v3.5.2+ powered :)"
+<li><a class="image-reference" title="Python v3.5.3 powered :)" href="https://www.python.org/download/">
+ <img alt="Python v3.5.3 powered :)"
       src="{{ pathto('_images/.python_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Made with Sphinx v1.6" href="http://sphinx-doc.org/">
- <img alt="Made with Sphinx v1.6"
+<li><a class="image-reference" title="Made with Sphinx v1.5.5" href="http://sphinx-doc.org/">
+ <img alt="Made with Sphinx v1.5.5"
       src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Made on (X)Ubuntu 17.04" href="https://www.ubuntu.com/about/about-ubuntu">
  <img alt="Made on (X)Ubuntu 17.04"
       src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Source code hosted on bitbucket.org, managed with Git v2.9.3" href="https://bitbucket.org/lbesson/web-sphinx/" >
- <img alt="Source code hosted on bitbucket.org, managed with Git v2.9.3"
+<li><a class="image-reference" title="Source code hosted on bitbucket.org, managed with Git v2.11" href="https://bitbucket.org/lbesson/web-sphinx/" >
+ <img alt="Source code hosted on bitbucket.org, managed with Git v2.11"
       src="{{ pathto('_images/.git_80_15.png', true)|e }}"
       style="width: 36.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Powered by MathJax v2.5.0" href="http://www.mathjax.org">
- <img alt="Powered by MathJax v2.5.0"
+<li><a class="image-reference" title="Powered by MathJax v2.7" href="http://www.mathjax.org">
+ <img alt="Powered by MathJax v2.7"
       src="{{ pathto('_images/.mathjax_60_12.png', true)|e }}"
       style="width: 60.0px; height: 12.0px;" /></a></li>
 <li><script type="text/javascript">
   if ( (window.location.host.substring(0, 6) == 'jarvis') || (window.location.host.substring(0, 6) == '127.0.') || (window.location.host.substring(0, 7) == '0.0.0.0') ) {
-  window.document.write("<a class=\"image-reference\" title=\"Web server : nginx v1.10.1 (Ubuntu)\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx v1.10.1 (Ubuntu) on "
+  window.document.write("<a class=\"image-reference\" title=\"Web server : nginx v1.10.3 (Ubuntu)\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx v1.10.3 (Ubuntu) on "
   + window.location.host + ":80\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>");
   }
   else {
