Added back « social icons » for the left-bar

--- a/.templates/externallinks.fr.html
+++ b/.templates/externallinks.fr.html
@@ -7,16 +7,12 @@
     :copyright: Copyright 2013-2017 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-<h3>Liens externes</h3>
-<ul class="this-page-menu">
-<li>
-<a href="https://GitHub.com/Naereen/" title"Sur GitHub.com !" rel="nofollow">GitHub : @Naereen</a>
-(→ <a href="https://Naereen.GitHub.io/" title"Sur GitHub.io !" rel="nofollow">Naereen.GitHub.io</a>)
-</li>
-<li>
-<a href="https://Bitbucket.org/lbesson/" title"Sur Bitbucket !" rel="nofollow">Bitbucket : @lbesson</a>
-(→ <a href="https://lbesson.Bitbucket.io/" title"Sur Bitbucket.io !" rel="nofollow">lbesson.Bitbucket.io</a>)
-</li>
-<li><a href="cuisine/" title"Blog de cuisine !" rel="nofollow">Blog de cuisine</a></li>
+<h3>Ailleurs ?</h3>
+<ul class="externallinks">
+<!-- <li><a href="https://GitHub.com/Naereen/" title"Sur GitHub.com !" rel="nofollow" target="_blank">GitHub: @Naereen</a></li> -->
+<li> <a href="https://Naereen.GitHub.io/" title"Sur GitHub.io !" rel="nofollow" target="_blank">naereen.GitHub.io</a></li>
+<!-- <li><a href="https://Bitbucket.org/lbesson/" title"Sur Bitbucket !" rel="nofollow" target="_blank">Bitbucket: @lbesson</a></li> -->
+<li> <a href="https://lbesson.Bitbucket.io/" title"Sur Bitbucket.io !" rel="nofollow" target="_blank">lbesson.Bitbucket.io</a></li>
+<li><a href="cuisine/" title"Blog de cuisine !" rel="nofollow" target="_blank">Blog de cuisine 🎂</a></li>
 </ul>
 </hr></br>
