--- a/.templates/social_icons.fr.html
+++ b/.templates/social_icons.fr.html
@@ -7,12 +7,14 @@
     :copyright: Copyright 2013-2016 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-  <h3><a title="Plus de détails !" href="{{ pathto('callme.fr.html', true)|e }}">Infos de contact</a></h3>
+  <h3><a title="Plus de détails !" href="{{ pathto('callme.fr.html', true)|e }}">Contactez-moi ?</a></h3>
   <ul class="details">
-    <li>Tél.: <a href="tel:100101011101001100111101100001_2">+33.6.28.41.22.57</a></li>
-    <li><a href="mailto:besson(at_crans{.]org">besson(à)crans.org</a></li>
-    <!-- <li><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></li> -->
+    <li>📞 <a rel="nofollow" href="tel:100101011101001100111101100001_2">+33 6 28 41 22 57</a></li>
+    <li>✉ <a rel="nofollow" href="mailto:besson(at_crans{.]org">Besson(à)crans.org</a></li>
+    <!-- <li><a rel="nofollow" href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></li> -->
   </ul>
-<!--   <ul class="social-icons">
-    <li><a class="facebook" href="https://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
-  </ul> -->
+  <ul class="social-icons">
+    <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="GitHub">GitHub</a></li>
+    <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="Bitbucket">Bitbucket</a></li>
+    <li><a rel="nofollow" target="_blank" class="facebook" href="https://www.Facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
+  </ul>
