--- a/.templates/externallinks.en.html
+++ b/.templates/externallinks.en.html
@@ -7,16 +7,12 @@
     :copyright: Copyright 2013-2017 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-<h3>External links</li>
-<ul class="this-page-menu">
-<li>
-<a href="https://GitHub.com/Naereen/" title"On GitHub.com!" rel="nofollow">GitHub : @Naereen</a>
-(→ <a href="https://Naereen.GitHub.io/" title"On GitHub.io!" rel="nofollow">Naereen.GitHub.io</a>)
-</li>
-<li>
-<a href="https://Bitbucket.org/lbesson/" title"On Bitbucket!" rel="nofollow">Bitbucket : @lbesson</a>
-(→ <a href="https://lbesson.Bitbucket.io/" title"On Bitbucket.io!" rel="nofollow">lbesson.Bitbucket.io</a>)
-</li>
-<li><a href="cuisine/" title"Cooking bolg (in French)!" rel="nofollow">French cooking blog</a></li>
+<h3>Me elsewhere</h3>
+<ul class="externallinks">
+<!-- <li><a href="https://GitHub.com/Naereen/" title"On GitHub.com!" rel="nofollow" target="_blank">GitHub: @Naereen</a></li> -->
+<li> <a href="https://Naereen.GitHub.io/" title"On GitHub.io!" rel="nofollow" target="_blank">naereen.GitHub.io</a></li>
+<!-- <li><a href="https://Bitbucket.org/lbesson/" title"On Bitbucket!" rel="nofollow" target="_blank">Bitbucket: @lbesson</a></li> -->
+<li> <a href="https://lbesson.Bitbucket.io/" title"On Bitbucket.io!" rel="nofollow" target="_blank">lbesson.Bitbucket.io</a></li>
+<li><a href="cuisine/" title"Cooking bolg (in French)!" rel="nofollow" target="_blank">Cooking blog 🎂 !</a></li>
 </ul>
 </br></hr>
