Remove Facebook from social icons on the left sidebar. :wrench:

--- a/.templates/social_icons.en.html
+++ b/.templates/social_icons.en.html
@@ -4,7 +4,7 @@
 
     Add links to social networks in the sidebar. (en version)
 
-    :copyright: Copyright 2013-2016 Lilian Besson
+    :copyright: Copyright 2013-2017 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
   <h3><a title="More details!" href="{{ pathto('callme.en.html', true)|e }}">Contact me?</a></h3>
@@ -16,5 +16,5 @@
   <ul class="social-icons">
     <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="GitHub">GitHub</a></li>
     <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="Bitbucket">Bitbucket</a></li>
-    <li><a rel="nofollow" target="_blank" class="facebook" href="https://www.Facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
+    <!-- <li><a rel="nofollow" target="_blank" class="facebook" href="https://www.Facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li> -->
   </ul>
