Removed link to Facebook but added link to Wikipedia. :wrench:

--- a/.templates/social_icons.en.html
+++ b/.templates/social_icons.en.html
@@ -14,7 +14,8 @@
     <!-- <li><a rel="nofollow" href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></li> -->
   </ul>
   <ul class="social-icons">
-    <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="GitHub">GitHub</a></li>
-    <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="Bitbucket">Bitbucket</a></li>
-    <!-- <li><a rel="nofollow" target="_blank" class="facebook" href="https://www.Facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li> -->
+    <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="On GitHub!">GitHub</a></li>
+    <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="On Bitbucket!">Bitbucket</a></li>
+    <li><a rel="nofollow" target="_blank" class="wikipedia" href="https://en.wikipedia.org/wiki/User:Naereen" title="On Wikipedia!">Wikipedia</a></li>
+    <!-- <li><a rel="nofollow" target="_blank" class="facebook" href="https://www.Facebook.com/naereencorp.lbesson" title="On Facebook!">Facebook</a></li> -->
   </ul>
