--- a/.templates/social_icons.fr.html
+++ b/.templates/social_icons.fr.html
@@ -14,7 +14,8 @@
     <!-- <li><a rel="nofollow" href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></li> -->
   </ul>
   <ul class="social-icons">
-    <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="GitHub">GitHub</a></li>
-    <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="Bitbucket">Bitbucket</a></li>
-    <!-- <li><a rel="nofollow" target="_blank" class="facebook" href="https://www.Facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li> -->
+    <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="Sur GitHub !">GitHub</a></li>
+    <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="Sur Bitbucket !">Bitbucket</a></li>
+    <li><a rel="nofollow" target="_blank" class="wikipedia" href="https://fr.wikipedia.org/wiki/Utilisateur:Naereen" title="Sur Wikipedia !">Wikipedia</a></li>
+    <!-- <li><a rel="nofollow" target="_blank" class="facebook" href="https://www.Facebook.com/naereencorp.lbesson" title="Sur Facebook !">Facebook</a></li> -->
   </ul>
