I forgot to add the https://pypi.python.org/pypi/sphinx_tabs/ extension as a requirement.

--- a/README.html
+++ b/README.html
@@ -62,7 +62,7 @@ This project use the following software:
     * [gnuplot](https://bitbucket.org/birkenfeld/sphinx-contrib/src/default/gnuplot/);
     * [youtube](https://bitbucket.org/birkenfeld/sphinx-contrib/src/default/youtube/);
 
- * these [Python packages, from PyPI](https://pypi.python.org/): [ansicolortags](https://pypi.python.org/pypi/ansicolortags/), [sphinx_pyreverse](https://pypi.python.org/pypi/sphinx_pyreverse/), [sphinx_git](https://pypi.python.org/pypi/sphinx_git/). Install them with `sudo pip install ansicolortags sphinx_pyreverse sphinx_git`;
+ * these [Python packages, from PyPI](https://pypi.python.org/): [ansicolortags](https://pypi.python.org/pypi/ansicolortags/), [sphinx_pyreverse](https://pypi.python.org/pypi/sphinx_pyreverse/), [sphinx_git](https://pypi.python.org/pypi/sphinx_git/), [sphinx_tabs](https://pypi.python.org/pypi/sphinx_tabs/). Install them with `sudo pip install ansicolortags sphinx_pyreverse sphinx_git sphinx_tabs`;
  * *Optional:* GnuPlot (but *not* GNU Octave), only for [these embedded examples](http://perso.crans.org/besson/gnuplot_embed.html);
  * *Optional:* GraphViz and Dot graph (`dot`), only for [these embedded examples](http://perso.crans.org/besson/graph.fr.html);
  * *Optional:* Ocaml, only for [these embedded examples](http://perso.crans.org/besson/runblock.en.html#adding-support-for-another-language-ocaml).
