Adding fonts from http://www.chriskrycho.com/. New style. Still in progress... :boom:

--- a/.templates_new/layout.html
+++ b/.templates_new/layout.html
@@ -21,7 +21,9 @@
     <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking,teaching,India,Hyderabad,Mahindra,Ecole Centrale,Mahindra Ecole Centrale,MEC,ECP,Ecole Centrale Paris,Spyder,CS101,MA101,MA102,jarvis,IPython,Professor,Professeur,Teacher,Teaching assistant,Enseignement,Enseignant,Colles,TP,TD,Lakanal,MP,Prépa,Colleur,Mr Besson,EPFL,LIB,BIG,splines,Rennes,Centrale-Supelec,ENS Rennes,ENS de Rennes,Lille,Inria,VisualStudio Code" />
 
     <link rel="stylesheet" href="{{ pathto('_static/sharingbuttons.min.css', true)|e }}" />
-    <link rel="stylesheet" href="{{ pathto('_static/hacks.css', true)|e }}" />
+    <link rel="stylesheet" href="{{ pathto('_static/hacks.min.css', true)|e }}" />
+    <link rel="stylesheet" href="{{ pathto('_static/fonts.min.css', true)|e }}" />
+    <link rel="stylesheet" href="{{ pathto('_static/style.min.css', true)|e }}" />
 
     <!-- scrollUp jQuery plugin (source : http://markgoodyear.com/2013/01/scrollup-jquery-plugin/) -->
     <script type="text/javascript" src="{{ pathto('_static/jquery.scrollUp.min.js', true)|e }}"></script>
