--- a/.templates_new/language-selector.html
+++ b/.templates_new/language-selector.html
@@ -1,26 +1,27 @@
 {#
-    .templates/language-selector.fr.html
+    .templates/language-selector.html
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
     Add one link to switch the language of the page (English to French, or French to English, soon more ?).
     WARNING: this is done with javascript and not a static Jinja template because there is no Jinja macro giving the path of the page without .en.html or .fr.html : the .en or .fr is IN the path...
 
-    :copyright: Copyright 2015 Lilian Besson
+    :copyright: Copyright 2017 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <div class="language-selector">
 <script type="text/javascript">
 	var pathname = window.location.pathname;
-    var thispage = pathname.substring(pathname.length - 8);
-	if (thispage == '.fr.html') {
+	var pagename = pathname.substring(0, pathname.length - 8);
+    var extension = pathname.substring(pathname.length - 8);
+	if (extension == '.fr.html') {
 		window.document.write('<h3>En anglais ?</h3><a class="image-reference" href="'
-			+ b + '.en.html" title="Lire cette page en anglais ?" >'
+			+ pagename + '.en.html" title="Lire cette page en anglais ?" >'
 			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
 		    + 'src="{{ pathto('_images/.en-us.gif', true)|e }}" alt="En anglais ?" /></a>');
 	};
-	if (thispage == '.en.html') {
+	if (extension == '.en.html') {
 		window.document.write('<h3>In French?</h3><a class="image-reference" href="'
-			+ b + '.fr.html" title="Read this page in French?" >'
+			+ pagename + '.fr.html" title="Read this page in French?" >'
 			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
 			+ 'src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a>');
 	};
