--- a/.templates_new/language-selector.html
+++ b/.templates_new/language-selector.html
@@ -17,13 +17,13 @@
 		window.document.write('<h3>En anglais ?</h3><a class="image-reference" href="'
 			+ pagename + '.en.html" title="Lire cette page en anglais ?" >'
 			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
-		    + 'src="{{ pathto('_images/.en-us.gif', true)|e }}" alt="En anglais ?" /></a>');
+		    + 'src="{{ pathto('_images/.en-us.gif', true)|e }}" alt="En anglais ?" /></a><br>');
 	};
 	if (extension == '.en.html') {
 		window.document.write('<h3>In French?</h3><a class="image-reference" href="'
 			+ pagename + '.fr.html" title="Read this page in French?" >'
 			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
-			+ 'src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a>');
+			+ 'src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a><br>');
 	};
 </script>
 </div>
