First fix for sidebar

--- a/.templates_new/externallinks.en.html
+++ b/.templates_new/externallinks.en.html
@@ -10,9 +10,8 @@
 <h3>Me elsewhere</h3>
 <ul class="externallinks">
 <!-- <li><a href="https://GitHub.com/Naereen/" title"On GitHub.com!" rel="nofollow" target="_blank">GitHub: @Naereen</a></li> -->
-<li> <a href="https://Naereen.GitHub.io/" title"On GitHub.io!" rel="nofollow" target="_blank">naereen.GitHub.io</a></li>
+<li> <a href="https://Naereen.GitHub.io/" title"On GitHub.io!" rel="nofollow" target="_blank">Naereen.GitHub.io</a></li>
 <!-- <li><a href="https://Bitbucket.org/lbesson/" title"On Bitbucket!" rel="nofollow" target="_blank">Bitbucket: @lbesson</a></li> -->
-<li> <a href="https://lbesson.Bitbucket.io/" title"On Bitbucket.io!" rel="nofollow" target="_blank">lbesson.Bitbucket.io</a></li>
+<li> <a href="https://lbesson.Bitbucket.io/" title"On Bitbucket.io!" rel="nofollow" target="_blank">LBesson.Bitbucket.io</a></li>
 <li><a href="cuisine/" title"Cooking bolg (in French)!" rel="nofollow" target="_blank">Cooking blog 🎂 !</a></li>
 </ul>
-</br></hr>
