--- a/.templates_new/searchbox.fr.html
+++ b/.templates_new/searchbox.fr.html
@@ -16,7 +16,7 @@
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
-    <p class="searchtip" style="font-size: 80%;">Saisissez un mot clef.</p>
+    <p class="searchtip" style="font-size: 80%;">Saisissez un mot clé.</p>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
 {%- endif %}
