--- a/.templates_new/language-selector.html
+++ b/.templates_new/language-selector.html
@@ -16,13 +16,13 @@
 	if (extension == '.fr.html') {
 		window.document.write('<h3>En anglais ?<a class="image-reference" href="'
 			+ pagename + '.en.html" title="Lire cette page en anglais ?" >'
-			+ '<img style="width:36px; height:23px; float: center;"'
+			+ '<img style="width:36px; height:23px; float: right;"'
 		    + 'src="{{ pathto('_images/.en-us.gif', true)|e }}" alt="En anglais ?" /></a></h3>');
 	};
 	if (extension == '.en.html') {
 		window.document.write('<h3>In French?<a class="image-reference" href="'
 			+ pagename + '.fr.html" title="Read this page in French?" >'
-			+ '<img style="width:36px; height:23px; float: center;"'
+			+ '<img style="width:36px; height:23px; float: right;"'
 			+ 'src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a></h3>');
 	};
 </script>
