Almost done for tweaking responsive theme.

--- a/.templates_new/layout.html
+++ b/.templates_new/layout.html
@@ -27,7 +27,7 @@
             /* scrollUp jQuery plugin */
             $(function () {
                 $.scrollUp({
-                    scrollName: 'scrollUpRight',// Element ID
+                    scrollName: 'scrollUpLeft', // Element ID
                     topDistance: '200',         // Distance from top before showing element (px)
                     topSpeed: 300,              // Speed back to top (ms)
                     animation: 'fade',          // Fade, slide, none
