--- a/.templates_new/social_icons.en.html
+++ b/.templates_new/social_icons.en.html
@@ -9,11 +9,11 @@
 #}
 <h3><a title="More details!" href="{{ pathto('callme.en.html', true)|e }}">Contact me?</a></h3>
 <ul class="details">
-  <li>📞 <a rel="nofollow" href="tel:100101011101001100111101100001_2">+33 6 28 41 22 57</a></li>
-  <li>✉ <a rel="nofollow" href="mailto:besson_AT_crans[DOT..)org">Besson(at)crans.org</a></li>
+    <li>📞 <a rel="nofollow" href="tel:100101011101001100111101100001_2">+33 6 28 41 22 57</a></li>
+    <li>📧 <a rel="nofollow" href="mailto:besson_AT_crans[DOT..)org">Besson(at)crans.org</a></li>
 </ul>
 <ul class="social-icons">
-  <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="On GitHub!">GitHub</a></li>
-  <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="On Bitbucket!">Bitbucket</a></li>
-  <li><a rel="nofollow" target="_blank" class="wikipedia" href="https://en.wikipedia.org/wiki/User:Naereen" title="On Wikipedia!">Wikipedia</a></li>
+    <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="On GitHub!"></a></li>
+    <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="On Bitbucket!"></a></li>
+    <li><a rel="nofollow" target="_blank" class="wikipedia" href="https://en.wikipedia.org/wiki/User:Naereen" title="On Wikipedia!"></a></li>
 </ul>
