--- a/.templates_new/social_icons.fr.html
+++ b/.templates_new/social_icons.fr.html
@@ -9,11 +9,11 @@
 #}
 <h3><a title="Plus de détails !" href="{{ pathto('callme.fr.html', true)|e }}">Contactez-moi ?</a></h3>
 <ul class="details">
-  <li>📞 <a rel="nofollow" href="tel:100101011101001100111101100001_2">+33 6 28 41 22 57</a></li>
-  <li>✉ <a rel="nofollow" href="mailto:besson(at_crans{.]org">Besson(à)crans.org</a></li>
+    <li>📞 <a rel="nofollow" href="tel:100101011101001100111101100001_2">+33 6 28 41 22 57</a></li>
+    <li>📧 <a rel="nofollow" href="mailto:besson(at_crans{.]org">Besson(à)crans.org</a></li>
 </ul>
 <ul class="social-icons">
-  <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="Sur GitHub !">GitHub</a></li>
-  <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="Sur Bitbucket !">Bitbucket</a></li>
-  <li><a rel="nofollow" target="_blank" class="wikipedia" href="https://fr.wikipedia.org/wiki/Utilisateur:Naereen" title="Sur Wikipedia !">Wikipedia</a></li>
+    <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="Sur GitHub !"></a></li>
+    <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="Sur Bitbucket !"></a></li>
+    <li><a rel="nofollow" target="_blank" class="wikipedia" href="https://fr.wikipedia.org/wiki/Utilisateur:Naereen" title="Sur Wikipedia !"></a></li>
 </ul>
