--- a/README.html
+++ b/README.html
@@ -7,7 +7,9 @@
 [![Made with Sphinx v1.5.1+](https://img.shields.io/badge/Made%20with-Sphinx-1f425f.svg)](http://sphinx-doc.org/)
 
 I have been using [Sphinx](http://sphinx-doc.org) [since 2012](https://bitbucket.org/lbesson/web-sphinx/commits/b3a0205a3f2fe288f91e9bceb9f1ac6f6335bce3), and I like it very much!
-(Currently this *project* is in version *2.6*, *public* release!)
+
+Currently this *project* is in version *3.0*, *public* release!
+I recently switched to a much cleaner theme, based on [alabaster](http://alabaster.readthedocs.io/), the new Sphinx's default theme, and nicer fonts (in Dec 2017)
 
 [![Maintained? Yes!](https://img.shields.io/badge/Maintained%3F-yes-green.svg)](https://bitbucket.org/lbesson/web-sphinx/commits/)
 [![Ask Me Anything!](https://img.shields.io/badge/Ask%20me-anything-1abc9c.svg)](https://bitbucket.org/lbesson/ama)
