Added screenshots for demo on README.md

--- a/.templates_new/externallinks.html
+++ b/.templates_new/externallinks.html
@@ -24,5 +24,15 @@
     <li> <a href="https://Naereen.GitHub.io/" title="Sur GitHub.io !" rel="nofollow" target="_blank">Naereen.GitHub.io</a></li>
     <!-- <li><a href="https://Bitbucket.org/lbesson/" title="Sur Bitbucket !" rel="nofollow" target="_blank">Bitbucket: @lbesson</a></li> -->
     <li> <a href="https://lbesson.Bitbucket.io/" title="Sur Bitbucket.io !" rel="nofollow" target="_blank">LBesson.Bitbucket.io</a></li>
-    <li><a href="cuisine/" title="Blog de cuisine !" rel="nofollow" target="_blank">Blog de cuisine 🎂</a></li>
+    <script type="text/javascript">
+        if ((is_fr) || (!is_en)) {
+            window.document.write('<li><a href="cuisine/" title="Blog de cuisine !" rel="nofollow" target="_blank">Blog de cuisine 🎂</a></li>');
+        };
+        if (is_en) {
+            window.document.write('<li><a href="cuisine/" title="My cooking blog!" rel="nofollow" target="_blank">My cooking blog 🎂</a></li>');
+        };
+    </script>
+    <noscript>
+        <li><a href="cuisine/" title="Blog de cuisine !" rel="nofollow" target="_blank">Blog de cuisine 🎂</a></li>
+    </noscript>
 </ul>
