Finish improving colors of sidebar and footer for responsive theme.

--- a/.templates_new/language-selector.html
+++ b/.templates_new/language-selector.html
@@ -11,11 +11,11 @@
 <div class="language-selector">
 <script type="text/javascript">
 	if (is_fr) {
-		window.document.write('<h3>En anglais ?<a class="image-reference" href="' + pagename + '.en.html" title="Lire cette page en anglais ?" > <img class="languageswitch" src="{{ pathto('_images/.en-us.gif', true)|e }}" alt="En anglais ?" /></a></h3>');
+		window.document.write('<h3>En anglais ?<a class="image-reference" href="' + pagename + '.en.html" title="Lire cette page en anglais ?" > <img class="languageswitch" src="{{ pathto('_images/.en-us.svg', true)|e }}" alt="En anglais ?" /></a></h3>');
 		};
 	if (is_en) {
 		window.document.write('<h3>In French?<a class="image-reference" href="'
-			+ pagename + '.fr.html" title="Read this page in French?" > <img class="languageswitch" src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a></h3>');
+			+ pagename + '.fr.html" title="Read this page in French?" > <img class="languageswitch" src="{{ pathto('_images/.fr.svg', true)|e }}" alt="In French?" /></a></h3>');
 	};
 </script>
 </div>
