--- a/.templates/sourcepdfcv.fr.html
+++ b/.templates/sourcepdfcv.fr.html
@@ -8,16 +8,9 @@
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if show_source and has_source and sourcename %}
-<h3>My English résumé?</h3>
-<ul class="this-page-menu">
-  <li><a style="text-decoration: underline" href="cv.en.html" title="Version anglaise"
-         rel="nofollow">Consult it in English</a>, in HTML.</li></br>
-</ul>
-<h3>Mon CV en PDF</h3>
-<ul class="this-page-menu">
-  <li><a style="text-decoration: underline" href="cv.fr.pdf" title="Version française PDF"
-         rel="nofollow">Voir la version française PDF</a>, compilée depuis LaTeX par <a href="http://perso.crans.org/besson/bin/pdflatex" title="Un script colorant la sortie pdflatex pour la rendre plus lisible">PDFLaTeX</a>.</li></br>
-  <li><a style="text-decoration: underline" href="cv.en.pdf" title="Version anglaise PDF"
-         rel="nofollow">Voir la version anglais PDF</a>, compilée depuis LaTeX par <a href="http://perso.crans.org/besson/bin/pdflatex" title="Un script colorant la sortie pdflatex pour la rendre plus lisible">PDFLaTeX</a>.</li></br>
-</ul>
+<h3>English résumé?</h3>
+<a href="cv.en.html" title="Version anglaise" rel="nofollow">In English</a>.
+<h3>CV en PDF</h3>
+<a href="cv.fr.pdf" title="Version française PDF" rel="nofollow">PDF français</a>.
+<a href="cv.en.pdf" title="Version anglaise PDF" rel="nofollow">PDF anglais</a>.
 {%- endif %}
