--- a/.templates.old/localtoc.fr.html
+++ b/.templates.old/localtoc.fr.html
@@ -4,10 +4,10 @@
 
     Sphinx sidebar template: local table of contents. (fr version)
 
-    :copyright: Copyright 2013-2017 Lilian Besson
+    :copyright: Copyright 2013-2016 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if display_toc %}
-    <h3>Table des Matières</h3>
-    {{ toc }}
+  <h3>Table des matières locale</h3>
+  {{ toc }}
 {%- endif %}
