--- a/.templates/language-selector.html
+++ b/.templates/language-selector.html
@@ -5,22 +5,17 @@
     Add one link to switch the language of the page (English to French, or French to English, soon more ?).
     WARNING: this is done with javascript and not a static Jinja template because there is no Jinja macro giving the path of the page without .en.html or .fr.html : the .en or .fr is IN the path...
 
-    :copyright: Copyright 2015 Lilian Besson
+    :copyright: Copyright 2017 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <div class="language-selector">
 <script type="text/javascript">
-	if (e == '.fr.html') {
-		window.document.write('<h3>En anglais ?</h3><a class="image-reference" href="'
-			+ b + '.en.html" title="Lire cette page en anglais ?" >'
-			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
-		    + 'src="{{ pathto('_images/.en-us.gif', true)|e }}" alt="En anglais ?" /></a>');
-	};
-	if (e == '.en.html') {
-		window.document.write('<h3>In French?</h3><a class="image-reference" href="'
-			+ b + '.fr.html" title="Read this page in French?" >'
-			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
-			+ 'src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a>');
+	if (is_fr) {
+		window.document.write('<h3>En anglais ?<a class="image-reference" href="' + pagename + '.en.html" title="Lire cette page en anglais ?" > <img class="languageswitch" src="{{ pathto('_images/.en-us.svg', true)|e }}" alt="En anglais ?" /></a></h3>');
+		};
+	if (is_en) {
+		window.document.write('<h3>In French?<a class="image-reference" href="'
+			+ pagename + '.fr.html" title="Read this page in French?" > <img class="languageswitch" src="{{ pathto('_images/.fr.svg', true)|e }}" alt="In French?" /></a></h3>');
 	};
 </script>
 </div>
