--- a/.templates/localtoc.en.html
+++ b/.templates/localtoc.en.html
@@ -4,10 +4,10 @@
 
     Add local table of content. (en version)
 
-    :copyright: Copyright 2013-2016 Lilian Besson
+    :copyright: Copyright 2013-2017 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if display_toc %}
-  <h3>Local table of content</h3>
-  {{ toc }}
+    <h3>Table of Content</h3>
+    {{ toc }}
 {%- endif %}
