--- a/.templates/searchbox.fr.html
+++ b/.templates/searchbox.fr.html
@@ -4,22 +4,19 @@
 
     The search box. (fr version)
 
-    :copyright: Copyright 2013-14 Lilian Besson
+    :copyright: Copyright 2013-17 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if pagename != "search" %}
 <div id="searchbox" style="display: none">
-  <h3>Recherche rapide</h3>
+    <h3>Recherche</h3>
     <form class="search" action="{{ pathto('search') }}" method="get">
-      <input type="text" name="q" />
-      <input type="submit" class="btn" value="Go ! " />
-      <input type="hidden" name="check_keywords" value="yes" />
-      <input type="hidden" name="area" value="default" />
+        <input type="text" name="q" />
+        <input type="submit" class="btn" value="Go ! " />
+        <input type="hidden" name="check_keywords" value="yes" />
+        <input type="hidden" name="area" value="default" />
     </form>
-    <p class="searchtip" style="font-size: 80%;">Saisissez un mot clef.</p>
+    <p class="searchtip" style="font-size: 80%;">Saisissez un mot clé.</p>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
-{%- endif %}
-{%- if pagename != "sitemap.fr" %}
-  <h3><a href="{{ pathto('sitemap.fr.html', true)|e }}" title="Consulter cette page !">Plan du Site</a></h3>
 {%- endif %}
