--- a/.templates/social_icons.en.html
+++ b/.templates/social_icons.en.html
@@ -7,15 +7,13 @@
     :copyright: Copyright 2013-2017 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-  <h3><a title="More details!" href="{{ pathto('callme.en.html', true)|e }}">Contact me?</a></h3>
-  <ul class="details">
+<h3><a title="More details!" href="{{ pathto('callme.en.html', true)|e }}">Contact me?</a></h3>
+<ul class="details">
     <li>📞 <a rel="nofollow" href="tel:100101011101001100111101100001_2">+33 6 28 41 22 57</a></li>
-    <li>✉ <a rel="nofollow" href="mailto:besson_AT_crans[DOT..)org">Besson(at)crans.org</a></li>
-    <!-- <li><a rel="nofollow" href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></li> -->
-  </ul>
-  <ul class="social-icons">
-    <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="On GitHub!">GitHub</a></li>
-    <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="On Bitbucket!">Bitbucket</a></li>
-    <li><a rel="nofollow" target="_blank" class="wikipedia" href="https://en.wikipedia.org/wiki/User:Naereen" title="On Wikipedia!">Wikipedia</a></li>
-    <!-- <li><a rel="nofollow" target="_blank" class="facebook" href="https://www.Facebook.com/naereencorp.lbesson" title="On Facebook!">Facebook</a></li> -->
-  </ul>
+    <li>📧 <a rel="nofollow" href="mailto:besson_AT_crans[DOT..)org">Besson(at)crans.org</a></li>
+</ul>
+<ul class="social-icons">
+    <li><a rel="nofollow" target="_blank" class="github" href="https://GitHub.com/Naereen/" title="On GitHub!"></a></li>
+    <li><a rel="nofollow" target="_blank" class="bitbucket" href="https://Bitbucket.org/lbesson/" title="On Bitbucket!"></a></li>
+    <li><a rel="nofollow" target="_blank" class="wikipedia" href="https://en.wikipedia.org/wiki/User:Naereen" title="On Wikipedia!"></a></li>
+</ul>
