--- a/README.html
+++ b/README.html
@@ -81,6 +81,7 @@ To install all these dependencies, use [brew](https://brew.sh/) on Mac OS, or yo
 ## License [![GPLv3 license](https://img.shields.io/badge/License-GPLv3-blue.svg)](http://perso.crans.org/besson/LICENSE.html)
 This project is released under the **GPLv3 license**, for more details,
 take a look at the [LICENSE file](http://perso.crans.org/besson/LICENSE.html) in the source.
+© Lilian Besson, 2012-2018.
 
 *Basically, that allow you to use all or part of the project for you own business.*
 
