Experimenting a small 'advertisement' ribbon on this page.

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{{ pathto('_static/hacks.min.css', true)|e }}" />
     <link rel="stylesheet" href="{{ pathto('_static/fonts.min.css', true)|e }}" />
     <link rel="stylesheet" href="{{ pathto('_static/style.min.css', true)|e }}" />
+    <link rel="stylesheet" href="{{ pathto('_static/corner-ribbon.css', true)|e }}" />
 
     <meta name="viewport" content="width=device-width, maximum-scale=1.5, initial-scale=1, target-densitydpi=device-dpi" />
     <meta name="author" content="Lilian Besson" />
