Ajout d'un lien dans la barre latérale vers https://perso.crans.org/besson/zero-dechet/

--- a/.templates/externallinks.fr.html
+++ b/.templates/externallinks.fr.html
@@ -13,6 +13,7 @@
 <!-- <li><a href="https://GitHub.com/Naereen/" title="Sur GitHub.com !" rel="nofollow" target="_blank">GitHub: @Naereen</a></li> -->
 <li> <a href="https://Naereen.GitHub.io/" title="Sur GitHub.io !" rel="nofollow" target="_blank">Naereen.GitHub.io</a></li>
 <!-- <li><a href="https://Bitbucket.org/lbesson/" title="Sur Bitbucket !" rel="nofollow" target="_blank">Bitbucket: @lbesson</a></li> -->
-<li> <a href="https://lbesson.Bitbucket.io/" title="Sur Bitbucket.io !" rel="nofollow" target="_blank">LBesson.Bitbucket.io</a></li>
+<!-- <li> <a href="https://lbesson.Bitbucket.io/" title="Sur Bitbucket.io !" rel="nofollow" target="_blank">LBesson.Bitbucket.io</a></li> -->
 <li><a href="cuisine/" title="Blog de cuisine !" rel="nofollow" target="_blank">Blog de cuisine 🎂</a></li>
+<li><a href="zero-dechet/" title="Blog sur mes combats écologiques et mon initiative zéro-déchet !" rel="nofollow" target="_blank">Blog zéro-déchet !</a></li>
 </ul>
