--- a/.templates/externallinks.en.html
+++ b/.templates/externallinks.en.html
@@ -4,7 +4,7 @@
 
     Add links to my GitHub and Bitbucket profiles. (en version)
 
-    :copyright: Copyright 2013-2017 Lilian Besson
+    :copyright: Copyright 2013-2018 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <br>
@@ -13,6 +13,7 @@
 <!-- <li><a href="https://GitHub.com/Naereen/" title="On GitHub.com!" rel="nofollow" target="_blank">GitHub: @Naereen</a></li> -->
 <li> <a href="https://Naereen.GitHub.io/" title="On GitHub.io!" rel="nofollow" target="_blank">Naereen.GitHub.io</a></li>
 <!-- <li><a href="https://Bitbucket.org/lbesson/" title="On Bitbucket!" rel="nofollow" target="_blank">Bitbucket: @lbesson</a></li> -->
-<li> <a href="https://lbesson.Bitbucket.io/" title="On Bitbucket.io!" rel="nofollow" target="_blank">LBesson.Bitbucket.io</a></li>
-<li><a href="cuisine/" title="Cooking bolg (in French)!" rel="nofollow" target="_blank">Cooking blog 🎂 !</a></li>
+<!-- <li> <a href="https://lbesson.Bitbucket.io/" title="On Bitbucket.io!" rel="nofollow" target="_blank">LBesson.Bitbucket.io</a></li> -->
+<li><a href="cuisine/" title="Cooking blog (in French)!" rel="nofollow" target="_blank">Cooking blog 🎂 !</a></li>
+<li><a href="zero-dechet/" title="Blog on my ecological fights and zero-waste initiative (in French)!" rel="nofollow" target="_blank">Zero-Waste blog!</a></li>
 </ul>
