--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"/><title>Lilian Besson's Web Pages - using Sphinx</title></head><body><xmp>
 # [Lilian Besson](https://bitbucket.org/lbesson/)'s Web Pages - using Sphinx
-[My web pages](http://perso.crans.org/besson/) are currently generated with [Sphinx Doc](http://sphinx-doc.org) (v*1.5+*).
+[My web pages](http://perso.crans.org/besson/) are currently generated with [Sphinx Doc](http://sphinx-doc.org) (*v1.5+*).
 
 [![Website http://perso.crans.org/besson/](https://img.shields.io/website-up-down-green-red/http/perso.crans.org.svg)](http://perso.crans.org/besson/)
 [![Made with Python v3.5.2+](https://img.shields.io/badge/Made%20with-Python-1f425f.svg)](https://www.python.org/)
@@ -15,7 +15,7 @@ I recently switched to a much cleaner theme, based on [alabaster](http://alabast
 [![Ask Me Anything!](https://img.shields.io/badge/Ask%20me-anything-1abc9c.svg)](https://bitbucket.org/lbesson/ama)
 
 ## Where are those pages ?
-==> On [http://perso.crans.org/besson/](<http://perso.crans.org/besson/> "Check this one !").   [![Website perso.crans.org](https://img.shields.io/website-up-down-green-red/http/perso.crans.org.svg)](http://perso.crans.org/)
+⟹ On [http://perso.crans.org/besson/](<http://perso.crans.org/besson/> "Check this one !").   [![Website perso.crans.org](https://img.shields.io/website-up-down-green-red/http/perso.crans.org.svg)](http://perso.crans.org/)
 
 ## Demos
 - In English:
