--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -86,29 +86,29 @@
     {% include "geekcode.html" %}
 
     <div class="supportBadges"><ul>
-    <li><a class="image-reference" title="Tested on Firefox v62.0, Chromium v69.0 and elinks v0.12pre6" href="https://www.mozilla.org/en-US/firefox/all/">
-        <img alt="Tested on Firefox v62.0, Chromium v69.0 and elinks v0.12pre6"
+    <li><a class="image-reference" title="Tested on Firefox v85.1, Chromium v87.0 and elinks v0.12pre6" href="https://www.mozilla.org/en-US/firefox/all/">
+        <img alt="Tested on Firefox v85.1, Chromium v87.0 and elinks v0.12pre6"
     src="{{ pathto('_images/.firefox_80_15.png', true)|e }}"
     style="width: 80.0px; height: 15.0px;" /></a></li>
-    <li><a class="image-reference" title="Uses Google Analytics" href="https://www.google.com/analytics/">
+    <!-- <li><a class="image-reference" title="Uses Google Analytics" href="https://www.google.com/analytics/">
         <img alt="Uses Google Analytics"
     src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}"
-    style="width: 80.0px; height: 15.0px;" /></a></li>
-    <li><a class="image-reference" title="Written with GNU Nano 2.9.3 and Visual Studio Code v1.27.2" href="http://www.nano-editor.org/">
-        <img alt="Written with GNU Nano 2.9.3 and Visual Studio Code v1.27.2"
+    style="width: 80.0px; height: 15.0px;" /></a></li> -->
+    <li><a class="image-reference" title="Written with GNU Nano 2.9.3 and Visual Studio Code v1.53.0" href="http://www.nano-editor.org/">
+        <img alt="Written with GNU Nano 2.9.3 and Visual Studio Code v1.53.0"
     src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}"
     style="width: 80.0px; height: 15.0px;" /></a></li>
     <li><a class="image-reference" title="This website is an Open Source project, released with the GPLv3 License" href="http://www.gnu.org/licenses/gpl.html">
         <img alt="This website is an Open Source project, released with the GPLv3 License"
     src="{{ pathto('_images/.opensource_80_15.png', true)|e }}"
     style="width: 80.0px; height: 15.0px;" /></a></li>
-    <li><a class="image-reference" title="Python v3.6.5 powered :)" href="https://www.python.org/download/">
-        <img alt="Python v3.6.5 powered :)"
+    <li><a class="image-reference" title="Python v3.6.9 powered :)" href="https://www.python.org/download/">
+        <img alt="Python v3.6.9 powered :)"
     src="{{ pathto('_images/.python_80_15.png', true)|e }}"
     style="width: 80.0px; height: 15.0px;" /></a></li>
     </ul><br><ul>
-    <li><a class="image-reference" title="Made with Sphinx v1.7.6" href="http://sphinx-doc.org/">
-        <img alt="Made with Sphinx v1.7.6"
+    <li><a class="image-reference" title="Made with Sphinx v3.4.6" href="https://sphinx-doc.org/">
+        <img alt="Made with Sphinx v3.4.6"
     src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}"
     style="width: 80.0px; height: 15.0px;" /></a></li>
     <li><a class="image-reference" title="Made on (X)Ubuntu 18.04" href="https://www.ubuntu.com/about/about-ubuntu">
@@ -125,7 +125,8 @@
     style="width: 60.0px; height: 12.0px;" /></a></li>
     <li><a class="image-reference" title="Web server : Apache HTTPD v2.4.10 (Debian)" href="http://httpd.apache.org/ABOUT_APACHE.html"> <img alt="Web server : Apache HTTPD v2.4.10 (Debian)" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li></ul>
     </div>
-    <script type="text/javascript" src="{{ pathto('_static/ga.js', true)|e }}"></script>
-    <noscript><img style="visibility: hidden; display: none;" alt="GA|Analytics" src="https://ga-beacon.appspot.com/UA-38514290-1/{{ pagename|e }}{{ file_suffix|e }}?pixel" /></noscript>
+    <!-- Update: I no longer want to use Google Analytics -->
+    <!-- <script type="text/javascript" src="{{ pathto('_static/ga.js', true)|e }}"></script> -->
+    <!-- <noscript><img style="visibility: hidden; display: none;" alt="GA|Analytics" src="https://ga-beacon.appspot.com/UA-38514290-1/{{ pagename|e }}{{ file_suffix|e }}?pixel" /></noscript> -->
 </div>
 {% endblock %}
